--- a/src/containers/chart/chart.module.css
+++ b/src/containers/chart/chart.module.css
@@ -1,5 +1,8 @@
 .wrapper {
-  border: 2px black solid;
-  overflow: hidden;
-  
+  height: 500px;
+  width: 100%;
 } 
+
+.VictoryContainer {
+  height: 60%;
+}
